[gd_scene load_steps=16 format=3 uid="uid://co46jy5gnd65s"]

[ext_resource type="Theme" uid="uid://cjxdeqspundq8" path="res://UI/Theme/MainMenu.tres" id="1_i6gwc"]
[ext_resource type="Script" path="res://UI/MainMenu/Menu.gd" id="1_w4wl4"]
[ext_resource type="Script" path="res://UI/MainMenu/Background.gd" id="3_c5ydy"]
[ext_resource type="Texture2D" uid="uid://ljybet5g8862" path="res://Assets/PixelPlatformer/background1.png" id="3_exet4"]
[ext_resource type="Texture2D" uid="uid://cpfibvg6d0je3" path="res://Assets/PixelPlatformer/background2.png" id="4_6n3fh"]
[ext_resource type="Texture2D" uid="uid://b363wyiw8oyk8" path="res://Assets/PixelPlatformer/background3.png" id="5_wpsyo"]
[ext_resource type="Texture2D" uid="uid://bjsadnhme5ie7" path="res://Assets/PixelPlatformer/background4.png" id="6_m1ulb"]
[ext_resource type="Texture2D" uid="uid://djnfkk8qct3r8" path="res://Assets/MyStuff/cursed_tower_of_time-pixilart.png" id="6_n8aor"]
[ext_resource type="Texture2D" uid="uid://dsyamag2lwaa1" path="res://Assets/PixelPlatformer/background5.png" id="7_g8hn8"]
[ext_resource type="Texture2D" uid="uid://bjgcwuy57cfme" path="res://Assets/PixelPlatformer/background6.png" id="8_837gu"]
[ext_resource type="Texture2D" uid="uid://c475rb2dofcde" path="res://Assets/MyStuff/Dark_cloud.png" id="11_tmwku"]
[ext_resource type="AudioStream" uid="uid://bbcse2eomwq10" path="res://UI/MainMenu/180733__jamesrodavidson__location-crows-nr.wav" id="12_66a1e"]
[ext_resource type="Script" path="res://UI/MainMenu/SaveSelect.gd" id="13_tl5u3"]
[ext_resource type="TileSet" uid="uid://cbq66xd4jm4gp" path="res://Tilesets/Forest.tres" id="14_jrxgk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_05850"]

[node name="Menu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme = ExtResource("1_i6gwc")
script = ExtResource("1_w4wl4")

[node name="Background" type="Control" parent="."]
layout_mode = 2
theme = ExtResource("1_i6gwc")

[node name="StaticBackground" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Background/StaticBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_exet4")

[node name="TextureRect2" type="TextureRect" parent="Background/StaticBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_6n3fh")

[node name="TextureRect3" type="TextureRect" parent="Background/StaticBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_wpsyo")

[node name="Clouds" type="Control" parent="Background"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_c5ydy")

[node name="Background" type="Control" parent="Background/Clouds"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Background/Clouds/Background"]
self_modulate = Color(0.317647, 0.317647, 0.317647, 1)
layout_mode = 0
offset_left = 1550.0
offset_top = 340.0
offset_right = 1850.0
offset_bottom = 460.0
texture = ExtResource("11_tmwku")

[node name="TextureRect2" type="TextureRect" parent="Background/Clouds/Background"]
self_modulate = Color(0.317647, 0.317647, 0.317647, 1)
layout_mode = 0
offset_left = 1403.0
offset_top = 376.0
offset_right = 1703.0
offset_bottom = 496.0
texture = ExtResource("11_tmwku")

[node name="TextureRect3" type="TextureRect" parent="Background/Clouds/Background"]
self_modulate = Color(0.317647, 0.317647, 0.317647, 1)
layout_mode = 0
offset_left = 1295.0
offset_top = 310.0
offset_right = 1595.0
offset_bottom = 430.0
texture = ExtResource("11_tmwku")

[node name="TextureRect4" type="TextureRect" parent="Background/Clouds/Background"]
self_modulate = Color(0.317647, 0.317647, 0.317647, 1)
layout_mode = 0
offset_left = 1220.0
offset_top = 391.0
offset_right = 1520.0
offset_bottom = 511.0
texture = ExtResource("11_tmwku")

[node name="TextureRect7" type="TextureRect" parent="Background/Clouds"]
self_modulate = Color(0.517647, 0.517647, 0.517647, 1)
layout_mode = 0
offset_left = 1383.0
offset_top = 144.0
offset_right = 1583.0
offset_bottom = 744.0
texture = ExtResource("6_n8aor")

[node name="Foreground" type="Control" parent="Background/Clouds"]
self_modulate = Color(0.317647, 0.317647, 0.317647, 1)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect5" type="TextureRect" parent="Background/Clouds/Foreground"]
self_modulate = Color(0.317647, 0.317647, 0.317647, 1)
layout_mode = 0
offset_left = 1550.0
offset_top = 340.0
offset_right = 1850.0
offset_bottom = 460.0
texture = ExtResource("11_tmwku")

[node name="TextureRect6" type="TextureRect" parent="Background/Clouds/Foreground"]
self_modulate = Color(0.317647, 0.317647, 0.317647, 1)
layout_mode = 0
offset_left = 1403.0
offset_top = 376.0
offset_right = 1703.0
offset_bottom = 496.0
texture = ExtResource("11_tmwku")

[node name="TextureRect7" type="TextureRect" parent="Background/Clouds/Foreground"]
self_modulate = Color(0.317647, 0.317647, 0.317647, 1)
layout_mode = 0
offset_left = 1295.0
offset_top = 310.0
offset_right = 1595.0
offset_bottom = 430.0
texture = ExtResource("11_tmwku")

[node name="TextureRect8" type="TextureRect" parent="Background/Clouds/Foreground"]
self_modulate = Color(0.317647, 0.317647, 0.317647, 1)
layout_mode = 0
offset_left = 1220.0
offset_top = 391.0
offset_right = 1520.0
offset_bottom = 511.0
texture = ExtResource("11_tmwku")

[node name="StaticForeground" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect4" type="TextureRect" parent="Background/StaticForeground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_m1ulb")

[node name="TextureRect5" type="TextureRect" parent="Background/StaticForeground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_g8hn8")

[node name="TextureRect6" type="TextureRect" parent="Background/StaticForeground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_837gu")

[node name="Main" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Main"]
layout_direction = 2
layout_mode = 2
offset_top = 368.0
offset_right = 300.0
offset_bottom = 712.0
size_flags_horizontal = 0
size_flags_vertical = 4
alignment = 1

[node name="Start" type="Button" parent="Main/VBox"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("1_i6gwc")
text = "Start"

[node name="Options" type="Button" parent="Main/VBox"]
layout_mode = 2
text = "Options"

[node name="Credits" type="Button" parent="Main/VBox"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="Main/VBox"]
layout_mode = 2
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_66a1e")
volume_db = 5.333
autoplay = true

[node name="SaveSelect" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("13_tl5u3")

[node name="PanelContainer" type="PanelContainer" parent="SaveSelect"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_05850")

[node name="VBoxContainer" type="VBoxContainer" parent="SaveSelect/PanelContainer"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="SaveSelect/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Save1" type="MenuButton" parent="SaveSelect/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 300)
layout_mode = 2
switch_on_hover = true

[node name="RichTextLabel" type="RichTextLabel" parent="SaveSelect/PanelContainer/VBoxContainer/Save1"]
layout_mode = 2
offset_right = 600.0
offset_bottom = 300.0
mouse_filter = 2
text = "EMPTY"

[node name="HSeparator" type="HSeparator" parent="SaveSelect/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Save2" type="MenuButton" parent="SaveSelect/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 300)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="SaveSelect/PanelContainer/VBoxContainer/Save2"]
layout_mode = 2
offset_right = 600.0
offset_bottom = 300.0
text = "EMPTY"

[node name="HSeparator2" type="HSeparator" parent="SaveSelect/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Save3" type="MenuButton" parent="SaveSelect/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 300)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="SaveSelect/PanelContainer/VBoxContainer/Save3"]
layout_mode = 2
offset_right = 600.0
offset_bottom = 300.0
text = "EMPTY"

[node name="HSeparator4" type="HSeparator" parent="SaveSelect/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(960, 540)

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, -30)
scale = Vector2(4, 4)
tile_set = ExtResource("14_jrxgk")
format = 2
layer_0/tile_data = PackedInt32Array(1114112, 65536, 0, 1114113, 65536, 0, 1114114, 65536, 0, 1114115, 65536, 0, 1114116, 65536, 0, 1114117, 65536, 0, 1114118, 65536, 0, 1114119, 65536, 0, 1114120, 65536, 0, 1114121, 65536, 0, 1114122, 65536, 0, 1114123, 65536, 0, 1114124, 65536, 0, 1114125, 65536, 0, 1114126, 65536, 0, 1114127, 65536, 0, 1114128, 65536, 0, 1114129, 65536, 0, 1114130, 65536, 0, 1114131, 65536, 0, 1114132, 65536, 0, 1114133, 65536, 0, 1114134, 65536, 0, 1114135, 65536, 0, 1114136, 65536, 0, 1114137, 65536, 0, 1114138, 65536, 0, 1114139, 65536, 0, 1114140, 65536, 0, 1114141, 65536, 0, 1835062, 131072, 2, 1769526, 131072, 1, 1703990, 131072, 1, 1638454, 131072, 1, 1572918, 131072, 1, 1507382, 131072, 1, 1441846, 131072, 1, 1376310, 131072, 1, 1310774, 131072, 1, 1245238, 131072, 1, 1179702, 131072, 1, 1114166, 131072, 0, 1835061, 65536, 2, 1769525, 65536, 1, 1703989, 65536, 1, 1638453, 65536, 1, 1572917, 65536, 1, 1507381, 65536, 1, 1441845, 65536, 1, 1376309, 65536, 1, 1310773, 65536, 1, 1245237, 65536, 1, 1179701, 65536, 1, 1114165, 65536, 0, 1835060, 65536, 2, 1769524, 65536, 1, 1703988, 65536, 1, 1638452, 65536, 1, 1572916, 65536, 1, 1507380, 65536, 1, 1441844, 65536, 1, 1376308, 65536, 1, 1310772, 65536, 1, 1245236, 65536, 1, 1179700, 65536, 1, 1114164, 65536, 0, 1835059, 65536, 2, 1769523, 65536, 1, 1703987, 65536, 1, 1638451, 65536, 1, 1572915, 65536, 1, 1507379, 65536, 1, 1441843, 65536, 1, 1376307, 65536, 1, 1310771, 65536, 1, 1245235, 65536, 1, 1179699, 65536, 1, 1114163, 65536, 0, 1835058, 65536, 2, 1769522, 65536, 1, 1703986, 65536, 1, 1638450, 65536, 1, 1572914, 65536, 1, 1507378, 65536, 1, 1441842, 65536, 1, 1376306, 65536, 1, 1310770, 65536, 1, 1245234, 65536, 1, 1179698, 65536, 1, 1114162, 65536, 0, 1835057, 65536, 2, 1769521, 65536, 1, 1703985, 65536, 1, 1638449, 65536, 1, 1572913, 65536, 1, 1507377, 65536, 1, 1441841, 65536, 1, 1376305, 65536, 1, 1310769, 65536, 1, 1245233, 65536, 1, 1179697, 65536, 1, 1114161, 65536, 0, 1835056, 65536, 2, 1769520, 65536, 1, 1703984, 65536, 1, 1638448, 65536, 1, 1572912, 65536, 1, 1507376, 65536, 1, 1441840, 65536, 1, 1376304, 65536, 1, 1310768, 65536, 1, 1245232, 65536, 1, 1179696, 65536, 1, 1114160, 65536, 0, 1835055, 65536, 2, 1769519, 65536, 1, 1703983, 65536, 1, 1638447, 65536, 1, 1572911, 65536, 1, 1507375, 65536, 1, 1441839, 65536, 1, 1376303, 65536, 1, 1310767, 65536, 1, 1245231, 65536, 1, 1179695, 65536, 1, 1114159, 65536, 0, 1835054, 65536, 2, 1769518, 65536, 1, 1703982, 65536, 1, 1638446, 65536, 1, 1572910, 65536, 1, 1507374, 65536, 1, 1441838, 65536, 1, 1376302, 65536, 1, 1310766, 65536, 1, 1245230, 65536, 1, 1179694, 65536, 1, 1114158, 65536, 0, 1835053, 65536, 2, 1769517, 65536, 1, 1703981, 65536, 1, 1638445, 65536, 1, 1572909, 65536, 1, 1507373, 65536, 1, 1441837, 65536, 1, 1376301, 65536, 1, 1310765, 65536, 1, 1245229, 65536, 1, 1179693, 65536, 1, 1114157, 65536, 0, 1835052, 65536, 2, 1769516, 65536, 1, 1703980, 65536, 1, 1638444, 65536, 1, 1572908, 65536, 1, 1507372, 65536, 1, 1441836, 65536, 1, 1376300, 65536, 1, 1310764, 65536, 1, 1245228, 65536, 1, 1179692, 65536, 1, 1114156, 65536, 0, 1835051, 65536, 2, 1769515, 65536, 1, 1703979, 65536, 1, 1638443, 65536, 1, 1572907, 65536, 1, 1507371, 65536, 1, 1441835, 65536, 1, 1376299, 65536, 1, 1310763, 65536, 1, 1245227, 65536, 1, 1179691, 65536, 1, 1114155, 65536, 0, 1835050, 65536, 2, 1769514, 65536, 1, 1703978, 65536, 1, 1638442, 65536, 1, 1572906, 65536, 1, 1507370, 65536, 1, 1441834, 65536, 1, 1376298, 65536, 1, 1310762, 65536, 1, 1245226, 65536, 1, 1179690, 65536, 1, 1114154, 65536, 0, 1835049, 65536, 2, 1769513, 65536, 1, 1703977, 65536, 1, 1638441, 65536, 1, 1572905, 65536, 1, 1507369, 65536, 1, 1441833, 65536, 1, 1376297, 65536, 1, 1310761, 65536, 1, 1245225, 65536, 1, 1179689, 65536, 1, 1114153, 65536, 0, 1835048, 65536, 2, 1769512, 65536, 1, 1703976, 65536, 1, 1638440, 65536, 1, 1572904, 65536, 1, 1507368, 65536, 1, 1441832, 65536, 1, 1376296, 65536, 1, 1310760, 65536, 1, 1245224, 65536, 1, 1179688, 65536, 1, 1114152, 65536, 0, 1835047, 65536, 2, 1769511, 65536, 1, 1703975, 65536, 1, 1638439, 65536, 1, 1572903, 65536, 1, 1507367, 65536, 1, 1441831, 65536, 1, 1376295, 65536, 1, 1310759, 65536, 1, 1245223, 65536, 1, 1179687, 65536, 1, 1114151, 65536, 0, 1835046, 65536, 2, 1769510, 65536, 1, 1703974, 65536, 1, 1638438, 65536, 1, 1572902, 65536, 1, 1507366, 65536, 1, 1441830, 65536, 1, 1376294, 65536, 1, 1310758, 65536, 1, 1245222, 65536, 1, 1179686, 65536, 1, 1114150, 65536, 0, 1835045, 65536, 2, 1769509, 65536, 1, 1703973, 65536, 1, 1638437, 65536, 1, 1572901, 65536, 1, 1507365, 65536, 1, 1441829, 65536, 1, 1376293, 65536, 1, 1310757, 65536, 1, 1245221, 65536, 1, 1179685, 65536, 1, 1114149, 65536, 0, 1835044, 65536, 2, 1769508, 65536, 1, 1703972, 65536, 1, 1638436, 65536, 1, 1572900, 65536, 1, 1507364, 65536, 1, 1441828, 65536, 1, 1376292, 65536, 1, 1310756, 65536, 1, 1245220, 65536, 1, 1179684, 65536, 1, 1114148, 65536, 0, 1835043, 65536, 2, 1769507, 65536, 1, 1703971, 65536, 1, 1638435, 65536, 1, 1572899, 65536, 1, 1507363, 65536, 1, 1441827, 65536, 1, 1376291, 65536, 1, 1310755, 65536, 1, 1245219, 65536, 1, 1179683, 65536, 1, 1114147, 65536, 0, 1835042, 65536, 2, 1769506, 65536, 1, 1703970, 65536, 1, 1638434, 65536, 1, 1572898, 65536, 1, 1507362, 65536, 1, 1441826, 65536, 1, 1376290, 65536, 1, 1310754, 65536, 1, 1245218, 65536, 1, 1179682, 65536, 1, 1114146, 65536, 0, 1835041, 65536, 2, 1769505, 65536, 1, 1703969, 65536, 1, 1638433, 65536, 1, 1572897, 65536, 1, 1507361, 65536, 1, 1441825, 65536, 1, 1376289, 65536, 1, 1310753, 65536, 1, 1245217, 65536, 1, 1179681, 65536, 1, 1114145, 65536, 0, 1835040, 65536, 2, 1769504, 65536, 1, 1703968, 65536, 1, 1638432, 65536, 1, 1572896, 65536, 1, 1507360, 65536, 1, 1441824, 65536, 1, 1376288, 65536, 1, 1310752, 65536, 1, 1245216, 65536, 1, 1179680, 65536, 1, 1114144, 65536, 0, 1835039, 65536, 2, 1769503, 65536, 1, 1703967, 65536, 1, 1638431, 65536, 1, 1572895, 65536, 1, 1507359, 65536, 1, 1441823, 65536, 1, 1376287, 65536, 1, 1310751, 65536, 1, 1245215, 65536, 1, 1179679, 65536, 1, 1114143, 65536, 0, 1835038, 65536, 2, 1769502, 65536, 1, 1703966, 65536, 1, 1638430, 65536, 1, 1572894, 65536, 1, 1507358, 65536, 1, 1441822, 65536, 1, 1376286, 65536, 1, 1310750, 65536, 1, 1245214, 65536, 1, 1179678, 65536, 1, 1114142, 65536, 0, 1835037, 65536, 2, 1769501, 65536, 1, 1703965, 65536, 1, 1638429, 65536, 1, 1572893, 65536, 1, 1507357, 65536, 1, 1441821, 65536, 1, 1376285, 65536, 1, 1310749, 65536, 1, 1245213, 65536, 1, 1179677, 65536, 1, 1835036, 65536, 2, 1769500, 65536, 1, 1703964, 65536, 1, 1638428, 65536, 1, 1572892, 65536, 1, 1507356, 65536, 1, 1441820, 65536, 1, 1376284, 65536, 1, 1310748, 65536, 1, 1245212, 65536, 1, 1179676, 65536, 1, 1835035, 65536, 2, 1769499, 65536, 1, 1703963, 65536, 1, 1638427, 65536, 1, 1572891, 65536, 1, 1507355, 65536, 1, 1441819, 65536, 1, 1376283, 65536, 1, 1310747, 65536, 1, 1245211, 65536, 1, 1179675, 65536, 1, 1835034, 65536, 2, 1769498, 65536, 1, 1703962, 65536, 1, 1638426, 65536, 1, 1572890, 65536, 1, 1507354, 65536, 1, 1441818, 65536, 1, 1376282, 65536, 1, 1310746, 65536, 1, 1245210, 65536, 1, 1179674, 65536, 1, 1835033, 65536, 2, 1769497, 65536, 1, 1703961, 65536, 1, 1638425, 65536, 1, 1572889, 65536, 1, 1507353, 65536, 1, 1441817, 65536, 1, 1376281, 65536, 1, 1310745, 65536, 1, 1245209, 65536, 1, 1179673, 65536, 1, 1835032, 65536, 2, 1769496, 65536, 1, 1703960, 65536, 1, 1638424, 65536, 1, 1572888, 65536, 1, 1507352, 65536, 1, 1441816, 65536, 1, 1376280, 65536, 1, 1310744, 65536, 1, 1245208, 65536, 1, 1179672, 65536, 1, 1835031, 65536, 2, 1769495, 65536, 1, 1703959, 65536, 1, 1638423, 65536, 1, 1572887, 65536, 1, 1507351, 65536, 1, 1441815, 65536, 1, 1376279, 65536, 1, 1310743, 65536, 1, 1245207, 65536, 1, 1179671, 65536, 1, 1835030, 65536, 2, 1769494, 65536, 1, 1703958, 65536, 1, 1638422, 65536, 1, 1572886, 65536, 1, 1507350, 65536, 1, 1441814, 65536, 1, 1376278, 65536, 1, 1310742, 65536, 1, 1245206, 65536, 1, 1179670, 65536, 1, 1835029, 65536, 2, 1769493, 65536, 1, 1703957, 65536, 1, 1638421, 65536, 1, 1572885, 65536, 1, 1507349, 65536, 1, 1441813, 65536, 1, 1376277, 65536, 1, 1310741, 65536, 1, 1245205, 65536, 1, 1179669, 65536, 1, 1835028, 65536, 2, 1769492, 65536, 1, 1703956, 65536, 1, 1638420, 65536, 1, 1572884, 65536, 1, 1507348, 65536, 1, 1441812, 65536, 1, 1376276, 65536, 1, 1310740, 65536, 1, 1245204, 65536, 1, 1179668, 65536, 1, 1835027, 65536, 2, 1769491, 65536, 1, 1703955, 65536, 1, 1638419, 65536, 1, 1572883, 65536, 1, 1507347, 65536, 1, 1441811, 65536, 1, 1376275, 65536, 1, 1310739, 65536, 1, 1245203, 65536, 1, 1179667, 65536, 1, 1835026, 65536, 2, 1769490, 65536, 1, 1703954, 65536, 1, 1638418, 65536, 1, 1572882, 65536, 1, 1507346, 65536, 1, 1441810, 65536, 1, 1376274, 65536, 1, 1310738, 65536, 1, 1245202, 65536, 1, 1179666, 65536, 1, 1835025, 65536, 2, 1769489, 65536, 1, 1703953, 65536, 1, 1638417, 65536, 1, 1572881, 65536, 1, 1507345, 65536, 1, 1441809, 65536, 1, 1376273, 65536, 1, 1310737, 65536, 1, 1245201, 65536, 1, 1179665, 65536, 1, 1835024, 65536, 2, 1769488, 65536, 1, 1703952, 65536, 1, 1638416, 65536, 1, 1572880, 65536, 1, 1507344, 65536, 1, 1441808, 65536, 1, 1376272, 65536, 1, 1310736, 65536, 1, 1245200, 65536, 1, 1179664, 65536, 1, 1835023, 65536, 2, 1769487, 65536, 1, 1703951, 65536, 1, 1638415, 65536, 1, 1572879, 65536, 1, 1507343, 65536, 1, 1441807, 65536, 1, 1376271, 65536, 1, 1310735, 65536, 1, 1245199, 65536, 1, 1179663, 65536, 1, 1835022, 65536, 2, 1769486, 65536, 1, 1703950, 65536, 1, 1638414, 65536, 1, 1572878, 65536, 1, 1507342, 65536, 1, 1441806, 65536, 1, 1376270, 65536, 1, 1310734, 65536, 1, 1245198, 65536, 1, 1179662, 65536, 1, 1835021, 65536, 2, 1769485, 65536, 1, 1703949, 65536, 1, 1638413, 65536, 1, 1572877, 65536, 1, 1507341, 65536, 1, 1441805, 65536, 1, 1376269, 65536, 1, 1310733, 65536, 1, 1245197, 65536, 1, 1179661, 65536, 1, 1835020, 65536, 2, 1769484, 65536, 1, 1703948, 65536, 1, 1638412, 65536, 1, 1572876, 65536, 1, 1507340, 65536, 1, 1441804, 65536, 1, 1376268, 65536, 1, 1310732, 65536, 1, 1245196, 65536, 1, 1179660, 65536, 1, 1835019, 65536, 2, 1769483, 65536, 1, 1703947, 65536, 1, 1638411, 65536, 1, 1572875, 65536, 1, 1507339, 65536, 1, 1441803, 65536, 1, 1376267, 65536, 1, 1310731, 65536, 1, 1245195, 65536, 1, 1179659, 65536, 1, 1835018, 65536, 2, 1769482, 65536, 1, 1703946, 65536, 1, 1638410, 65536, 1, 1572874, 65536, 1, 1507338, 65536, 1, 1441802, 65536, 1, 1376266, 65536, 1, 1310730, 65536, 1, 1245194, 65536, 1, 1179658, 65536, 1, 1835017, 65536, 2, 1769481, 65536, 1, 1703945, 65536, 1, 1638409, 65536, 1, 1572873, 65536, 1, 1507337, 65536, 1, 1441801, 65536, 1, 1376265, 65536, 1, 1310729, 65536, 1, 1245193, 65536, 1, 1179657, 65536, 1, 1835016, 65536, 2, 1769480, 65536, 1, 1703944, 65536, 1, 1638408, 65536, 1, 1572872, 65536, 1, 1507336, 65536, 1, 1441800, 65536, 1, 1376264, 65536, 1, 1310728, 65536, 1, 1245192, 65536, 1, 1179656, 65536, 1, 1835015, 65536, 2, 1769479, 65536, 1, 1703943, 65536, 1, 1638407, 65536, 1, 1572871, 65536, 1, 1507335, 65536, 1, 1441799, 65536, 1, 1376263, 65536, 1, 1310727, 65536, 1, 1245191, 65536, 1, 1179655, 65536, 1, 1835014, 65536, 2, 1769478, 65536, 1, 1703942, 65536, 1, 1638406, 65536, 1, 1572870, 65536, 1, 1507334, 65536, 1, 1441798, 65536, 1, 1376262, 65536, 1, 1310726, 65536, 1, 1245190, 65536, 1, 1179654, 65536, 1, 1835013, 65536, 2, 1769477, 65536, 1, 1703941, 65536, 1, 1638405, 65536, 1, 1572869, 65536, 1, 1507333, 65536, 1, 1441797, 65536, 1, 1376261, 65536, 1, 1310725, 65536, 1, 1245189, 65536, 1, 1179653, 65536, 1, 1835012, 65536, 2, 1769476, 65536, 1, 1703940, 65536, 1, 1638404, 65536, 1, 1572868, 65536, 1, 1507332, 65536, 1, 1441796, 65536, 1, 1376260, 65536, 1, 1310724, 65536, 1, 1245188, 65536, 1, 1179652, 65536, 1, 1835011, 65536, 2, 1769475, 65536, 1, 1703939, 65536, 1, 1638403, 65536, 1, 1572867, 65536, 1, 1507331, 65536, 1, 1441795, 65536, 1, 1376259, 65536, 1, 1310723, 65536, 1, 1245187, 65536, 1, 1179651, 65536, 1, 1835010, 65536, 2, 1769474, 65536, 1, 1703938, 65536, 1, 1638402, 65536, 1, 1572866, 65536, 1, 1507330, 65536, 1, 1441794, 65536, 1, 1376258, 65536, 1, 1310722, 65536, 1, 1245186, 65536, 1, 1179650, 65536, 1, 1835009, 65536, 2, 1769473, 65536, 1, 1703937, 65536, 1, 1638401, 65536, 1, 1572865, 65536, 1, 1507329, 65536, 1, 1441793, 65536, 1, 1376257, 65536, 1, 1310721, 65536, 1, 1245185, 65536, 1, 1179649, 65536, 1, 1835008, 65536, 2, 1769472, 65536, 1, 1703936, 65536, 1, 1638400, 65536, 1, 1572864, 65536, 1, 1507328, 65536, 1, 1441792, 65536, 1, 1376256, 65536, 1, 1310720, 65536, 1, 1245184, 65536, 1, 1179648, 65536, 1, 1900543, 65536, 2, 1835007, 65536, 1, 1769471, 65536, 1, 1703935, 65536, 1, 1638399, 65536, 1, 1572863, 65536, 1, 1507327, 65536, 1, 1441791, 65536, 1, 1376255, 65536, 1, 1310719, 65536, 1, 1245183, 65536, 1, 1179647, 65536, 0, 1900542, 65536, 2, 1835006, 65536, 1, 1769470, 65536, 1, 1703934, 65536, 1, 1638398, 65536, 1, 1572862, 65536, 1, 1507326, 65536, 1, 1441790, 65536, 1, 1376254, 65536, 1, 1310718, 65536, 1, 1245182, 65536, 1, 1179646, 65536, 0, 1900541, 65536, 2, 1835005, 65536, 1, 1769469, 65536, 1, 1703933, 65536, 1, 1638397, 65536, 1, 1572861, 65536, 1, 1507325, 65536, 1, 1441789, 65536, 1, 1376253, 65536, 1, 1310717, 65536, 1, 1245181, 65536, 1, 1179645, 65536, 0, 1900540, 65536, 2, 1835004, 65536, 1, 1769468, 65536, 1, 1703932, 65536, 1, 1638396, 65536, 1, 1572860, 65536, 1, 1507324, 65536, 1, 1441788, 65536, 1, 1376252, 65536, 1, 1310716, 65536, 1, 1245180, 65536, 1, 1179644, 65536, 0, 1900539, 65536, 2, 1835003, 65536, 1, 1769467, 65536, 1, 1703931, 65536, 1, 1638395, 65536, 1, 1572859, 65536, 1, 1507323, 65536, 1, 1441787, 65536, 1, 1376251, 65536, 1, 1310715, 65536, 1, 1245179, 65536, 1, 1179643, 65536, 0, 1900538, 65536, 2, 1835002, 65536, 1, 1769466, 65536, 1, 1703930, 65536, 1, 1638394, 65536, 1, 1572858, 65536, 1, 1507322, 65536, 1, 1441786, 65536, 1, 1376250, 65536, 1, 1310714, 65536, 1, 1245178, 65536, 1, 1179642, 65536, 0, 1900537, 65536, 2, 1835001, 65536, 1, 1769465, 65536, 1, 1703929, 65536, 1, 1638393, 65536, 1, 1572857, 65536, 1, 1507321, 65536, 1, 1441785, 65536, 1, 1376249, 65536, 1, 1310713, 65536, 1, 1245177, 65536, 1, 1179641, 65536, 0, 1900536, 65536, 2, 1835000, 65536, 1, 1769464, 65536, 1, 1703928, 65536, 1, 1638392, 65536, 1, 1572856, 65536, 1, 1507320, 65536, 1, 1441784, 65536, 1, 1376248, 65536, 1, 1310712, 65536, 1, 1245176, 65536, 1, 1179640, 65536, 0, 1900535, 65536, 2, 1834999, 65536, 1, 1769463, 65536, 1, 1703927, 65536, 1, 1638391, 65536, 1, 1572855, 65536, 1, 1507319, 65536, 1, 1441783, 65536, 1, 1376247, 65536, 1, 1310711, 65536, 1, 1245175, 65536, 1, 1179639, 65536, 0, 1900534, 65536, 2, 1834998, 65536, 1, 1769462, 65536, 1, 1703926, 65536, 1, 1638390, 65536, 1, 1572854, 65536, 1, 1507318, 65536, 1, 1441782, 65536, 1, 1376246, 65536, 1, 1310710, 65536, 1, 1245174, 65536, 1, 1179638, 65536, 0, 1900533, 65536, 2, 1834997, 65536, 1, 1769461, 65536, 1, 1703925, 65536, 1, 1638389, 65536, 1, 1572853, 65536, 1, 1507317, 65536, 1, 1441781, 65536, 1, 1376245, 65536, 1, 1310709, 65536, 1, 1245173, 65536, 1, 1179637, 65536, 0, 1900532, 65536, 2, 1834996, 65536, 1, 1769460, 65536, 1, 1703924, 65536, 1, 1638388, 65536, 1, 1572852, 65536, 1, 1507316, 65536, 1, 1441780, 65536, 1, 1376244, 65536, 1, 1310708, 65536, 1, 1245172, 65536, 1, 1179636, 65536, 0, 1900531, 65536, 2, 1834995, 65536, 1, 1769459, 65536, 1, 1703923, 65536, 1, 1638387, 65536, 1, 1572851, 65536, 1, 1507315, 65536, 1, 1441779, 65536, 1, 1376243, 65536, 1, 1310707, 65536, 1, 1245171, 65536, 1, 1179635, 65536, 0, 1900530, 0, 2, 1834994, 0, 1, 1769458, 0, 1, 1703922, 0, 1, 1638386, 0, 1, 1572850, 0, 1, 1507314, 0, 1, 1441778, 0, 1, 1376242, 0, 1, 1310706, 0, 1, 1245170, 0, 1, 1179634, 0, 0)
